--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
      <title>Text Editor</title>
-    <link rel="website icon" type="img" href="images\text-box.png" />
+    <link rel="website icon" type="img" href="text-box.png" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text Editor</title>
